2007-10-01  Jim Evins  <evins@snaught.com>

	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-docs.sgml:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/category.sgml:
	* docs/libglabels/tmpl/enums.sgml:
	* docs/libglabels/tmpl/init.sgml:
	* docs/libglabels/tmpl/libglabels-unused.sgml:
	* docs/libglabels/tmpl/paper.sgml:
	* docs/libglabels/tmpl/template-construction.sgml:
	* docs/libglabels/tmpl/template-db.sgml:
	* docs/libglabels/tmpl/template-misc.sgml:
	* docs/libglabels/tmpl/template-struct.sgml:
	* docs/libglabels/tmpl/template.sgml:
	* docs/libglabels/tmpl/xml-category.sgml:
	* docs/libglabels/tmpl/xml-template.sgml:
	* libglabels/category.h:
	* libglabels/init.c:
	* libglabels/libglabels-private.h:
	* libglabels/paper.h:
	* libglabels/template.c:
	* libglabels/template.h:
	* libglabels/xml-template.h:
		Basic documentation framework for libglabels updated.  This still needs some
		fleshing out.
	
2007-09-27  Jim Evins  <evins@snaught.com>

	* docs/libglabels/libglabels-decl-list.txt:
	* docs/libglabels/libglabels-docs.sgml:
	* docs/libglabels/libglabels-sections.txt:
	* docs/libglabels/libglabels-undocumented.txt:
	* docs/libglabels/tmpl/enums.sgml:
	* docs/libglabels/tmpl/init.sgml:
	* docs/libglabels/tmpl/libglabels-unused.sgml:
	* docs/libglabels/tmpl/paper.sgml:
	* docs/libglabels/tmpl/template.sgml:
	* docs/libglabels/tmpl/xml-paper.sgml:
	* docs/libglabels/tmpl/xml-template.sgml:
	* docs/libglabels/tmpl/xml.sgml:
	* libglabels/Makefile.am:
	* libglabels/category.c:
	* libglabels/category.h:
	* libglabels/enums.h:
	* libglabels/init.c:
	* libglabels/init.h:
	* libglabels/libglabels-private.h:
	* libglabels/libglabels.h:
	* libglabels/paper.c:
	* libglabels/paper.h:
	* libglabels/template.c:
	* libglabels/template.h:
	* libglabels/xml-category.c:
	* libglabels/xml-category.h:
	* libglabels/xml-paper.c:
	* libglabels/xml-paper.h:
	* libglabels/xml-template.c: