@@ -1,3 +1,10 @@
+2007-10-08  Jim Evins  <evins@snaught.com>
+
+	* libglabels/template.c:
+	* libglabels/xml-template.c:
+	* src/template-designer.c:
+		Missed some symbols with libglabels API work.
+
 2007-10-01  Jim Evins  <evins@snaught.com>
 
 	* docs/libglabels/libglabels-decl-list.txt:
